examples/test/testpolicy14651.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14651
  namespace: namespace241
spec:
  podSelector:
    matchLabels:
      key8: value45
      key40: value19
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value33
          key43: value0
          key13: value27
      podSelector:
        matchLabels:
          key29: value44
          key41: value47
